--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -25,11 +25,15 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
 @import "~swiper/css";
 @import "~swiper/css/pagination";
 
 :root {
-    --ion-color-tg-primary  :  #6304cc      ;
-  
-  }
+  --ion-color-tg-primary: #6304cc;
+
+  --ion-color-tg-primary: #6304cc;
+  --ion-color-tg-primary-contrast: #ffffff;
+  --ion-color-tg-secondary: #ff5733;
+  --ion-color-tg-secondary-contrast: #ffffff;
+}
