--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div padding>
-            <ion-button type="submit" expand="block" color="tertiary">
+            <ion-button type="submit" expand="block" >
               Ingresar
             </ion-button>
           </div>
@@ -96,8 +96,8 @@
           >
         </ion-col>
       </ion-row>
-      <ion-row justify-content-center>
-        <ion-col size-md="4" size-lg="3" size-xs="6">
+      <ion-row   class="ion-justify-content-center">
+        <ion-col  size-md="4" size-lg="3" size-xs="6">
           <div padding>
             <ion-button
               class="custom-button google-button"
@@ -109,7 +109,7 @@
             </ion-button>
           </div>
         </ion-col>
-        <ion-col size-md="4" size-lg="3" size-xs="6">
+        <!-- <ion-col size-md="4" size-lg="3" size-xs="6">
           <div padding>
             <ion-button
               class="custom-button facebook-button"
@@ -120,7 +120,11 @@
               <ion-text>Facebook</ion-text>
             </ion-button>
           </div>
-        </ion-col>
+        </ion-col> -->
+      </ion-row>
+
+      <ion-row class="ion-justify-content-center">
+        <p>Segui explorando <a href="/app/tabs/home">Tianguis</a></p>
       </ion-row>
     </ion-grid>
   </form>
