--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -48,3 +48,13 @@ ion-content{
   background-color: #1877f2;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+a {
+  text-decoration: none; 
+  
+  font-weight: bold; 
+}
+
+ion-row{
+  text-align: center; 
+}
