--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,8 +2,20 @@
     height:10vh;
 } */
 
-.container{
-    font-family: 'DM Sans', sans-serif;
-    padding-bottom: 1rem;
+.container {
+  font-family: "DM Sans", sans-serif;
+  padding-bottom: 1rem;
 }
 
+ion-footer {
+  ion-toolbar {
+    text-align: center;
+    font-size: 14px;
+    color: #777;
+    a {
+      text-decoration: none;
+
+      font-weight: bold;
+    }
+  }
+}
