--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -5,50 +5,7 @@
     </ion-button> -->
   </ion-buttons>
 </ion-toolbar>
-<ion-content class="ion-padding" scroll-y="false">
-  <!-- <ion-slides pager="true" [options]="slideOpts">
-    <ion-slide>
-      <div class="slide">
-        <h1>Compra</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit, vehicula arcu
-          mus faucibus gravida conubia malesuada sodales, ad porta tempor
-          bibendum morbi penatibus.
-        </p>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class="slide">
-        <h1>Vende</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit, vehicula arcu
-          mus faucibus gravida conubia malesuada sodales, ad porta tempor
-          bibendum morbi penatibus.
-        </p>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class="slide">
-        <h1>Cotiza</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit, vehicula arcu
-          mus faucibus gravida conubia malesuada sodales, ad porta tempor
-          bibendum morbi penatibus.
-        </p>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class="slide">
-        <h1>Emprende</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit, vehicula arcu
-          mus faucibus gravida conubia malesuada sodales, ad porta tempor
-          bibendum morbi penatibus.
-        </p>
-        <ion-button expand="block" (click)="start()">Empezar</ion-button>
-      </div>
-    </ion-slide>
-  </ion-slides> -->
+<ion-content class="ion-padding" scroll-y="false" >
 
   <div class="intro">
     <div class="intro__content__image">
@@ -76,10 +33,13 @@
       </swiper>
     </div>
     <div class="intro__btns">
-      <ion-button expand="block" shape="round" (click)="register()">Crear Nueva Cuenta</ion-button>
+      <ion-button expand="block"  shape="round" (click)="continue()"
+        >Continuar</ion-button
+      >
+      <!-- <ion-button expand="block" shape="round" (click)="register()">Crear Nueva Cuenta</ion-button>
       <ion-button expand="block" fill="outline" shape="round" (click)="login()"
         >Iniciar Sesión</ion-button
-      >
+      > -->
     </div>
   </div>
 </ion-content>
