--- a/src/app/quote/quote.page.scss
+++ b/src/app/quote/quote.page.scss
@@ -1,24 +1,36 @@
-.rowofcards{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.rowofcards {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .fab-button {
-    position: relative;
-    padding: 16px;
-    text-align: left;
-  }
-  
-  .fab-button::after {
-    content: attr(data-text);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    font-size: 12px;
+  position: relative;
+  padding: 16px;
+  text-align: left;
+}
+
+.fab-button::after {
+  content: attr(data-text);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-size: 12px;
+  text-align: center;
+  color: #fff;
+}
+
+ion-footer {
+  ion-toolbar {
     text-align: center;
-    color: #fff;
+    font-size: 14px;
+    color: #777;
+    a {
+      text-decoration: none;
+
+      font-weight: bold;
+    }
   }
-  
+}
