--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,19 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+/*   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
+ */
+  --ion-color-primary: #6304cc;
+  --ion-color-primary-rgb: 99, 4, 204;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #5a02b4;
+  --ion-color-primary-tint: #7a2ed8;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -77,6 +84,30 @@
 
   /* Color Custom */
   --ion-color-favorite: #f23636;
+
+  --ion-color-tg-primary: #6304cc;
+  --ion-color-tg-primary: #6304cc;
+      --ion-color-tg-primary-contrast: #ffffff;
+      --ion-color-tg-secondary: #ff5733;
+      --ion-color-tg-secondary-contrast: #ffffff;
+  
+
+  .button-primary {
+    background-color: var(--ion-color-tg-primary);
+    color: var(--ion-color-tg-primary-contrast);
+  }
+  
+  .header {
+    background-color: var(--ion-color-tg-primary);
+    color: var(--ion-color-tg-primary-contrast);
+  }
+  
+  .secondary-button {
+    background-color: var(--ion-color-tg-secondary);
+    color: var(--ion-color-tg-secondary-contrast);
+  }
+  
+
 }
 /* @media (prefers-color-scheme: dark)  */
 
