Add scan time before showing home login message

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -124,7 +124,7 @@
       </ion-row>
 
       <ion-row class="ion-justify-content-center">
-        <p>Segui explorando <a href="/app/tabs/home">Tianguis</a></p>
+        <p>Segui explorando <a (click)="goHome()">Tianguis</a></p>
       </ion-row>
     </ion-grid>
   </form>
