--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -30,22 +30,21 @@
       <ion-label>
         <h2>{{profile.name}}</h2>
         <p class="ion-text-start">
-          <ion-icon name="star"></ion-icon> {{profile.rating}}
+          <ion-icon name="star" color="primary"></ion-icon> {{profile.rating}}
         </p>
       </ion-label>
     </ion-item>
     <ion-card-title>{{product.name}}</ion-card-title>
     <ion-card-subtitle
-      ><ion-icon name="star"></ion-icon> {{product.rating}}
+      ><ion-icon name="star" color="primary"></ion-icon> {{product.rating}}
     </ion-card-subtitle>
-    <p>{{product.description}}</p>
     <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"
       ><del>{{product.oldPrice | currency:'Q'}}</del>
     </ion-card-title>
-    <ion-card-title class="price-title"
+    <ion-card-title color="primary" class="price-title"
       >{{product.price | currency:'Q'}}</ion-card-title
     >
-    <p>Categorias</p>
+    <p><strong>Categorias:</strong></p>
     <ion-row>
       <div *ngFor="let category of product.categories">
         <ion-col
@@ -54,8 +53,12 @@
       </div>
     </ion-row>
 
-    <p>Descripción</p>
+    <p><strong>Descripción:</strong></p>
     <ion-label> {{product.description}} </ion-label>
+    <p><strong>Reseñas:</strong></p>
+    <ion-list>
+      <app-review></app-review>
+    </ion-list>
   </ion-card-content>
 </ion-content>
 <ion-footer>
