--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title> Perfil Vendedor</ion-title>
+    <ion-title> Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -117,16 +117,8 @@
             [(ngModel)]="profile.address"
           ></ion-input>
         </ion-item>
-        <!-- <ion-item>
-          <ion-label position="stacked">Dirección Web: </ion-label>
-          <ion-input
-            name="website"
-            type="text"
-            [(ngModel)]="profile.website"
-          ></ion-input>
-        </ion-item> -->
         <ion-button type="submit" expand="block" color="tertiary">
-          Actualizar a Vendedor
+          Actualizar
         </ion-button>
       </form>
     </ion-list>
