--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -85,7 +85,7 @@
 
   </ion-card-content>
 </ion-content>
-<ion-footer>
+<ion-footer *ngIf="isAuth">
   <ion-button *ngIf="type === 'info'" expand="block" shape="round" (click)="sendMessage(product.id)"
     >Comprar</ion-button
   >
