--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.scss
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.scss
@@ -97,3 +97,21 @@ ion-card img {
     }
   }
 }
+
+.container {
+  font-family: "DM Sans", sans-serif;
+  padding-bottom: 1rem;
+}
+
+ion-footer {
+  ion-toolbar {
+    text-align: center;
+    font-size: 14px;
+    color: #777;
+    a {
+      text-decoration: none;
+
+      font-weight: bold;
+    }
+  }
+}
