--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -93,3 +93,12 @@
     >Enviar Reseña</ion-button
   >
 </ion-footer>
+
+<ion-footer *ngIf="!isAuth">
+  <ion-toolbar >
+    <p>Para ver todas las opciones (Vender, comprar y cotizar).</p>
+    <ion-button expand="block"  shape="round" (click)="goLogin()"
+        >Inicia sesión</ion-button
+      >
+  </ion-toolbar>
+</ion-footer>
