--- a/src/app/markteplace/pages/product/product.page.scss
+++ b/src/app/markteplace/pages/product/product.page.scss
@@ -62,3 +62,21 @@ ion-card-header {
   height: 100%;
   object-fit: cover;
 }
+
+.container {
+  font-family: "DM Sans", sans-serif;
+  padding-bottom: 1rem;
+}
+
+ion-footer {
+  ion-toolbar {
+    text-align: center;
+    font-size: 14px;
+    color: #777;
+    a {
+      text-decoration: none;
+
+      font-weight: bold;
+    }
+  }
+}
