--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -26,7 +26,7 @@
     </div>
     <div class="profile__info">
       <div class="profile__info--box">
-        <p><ion-icon name="star"></ion-icon> {{profile.rating}}</p>
+        <p><ion-icon name="star"></ion-icon> {{profile.rating |number:'1.1-1'}}</p>
       </div>
       <div class="profile__info--box">
         <p><ion-icon name="pricetags"></ion-icon> {{profile.sales}}</p>
