--- a/src/app/markteplace/components/product-card/product-card.component.html
+++ b/src/app/markteplace/components/product-card/product-card.component.html
@@ -17,13 +17,13 @@
     <div class="product__header--heart">
       <ion-icon
         (click)="eventFavorite(false)"
-        *ngIf="product.favorite"
+        *ngIf="isFavorite"
         slot="start"
         name="heart"
       ></ion-icon>
       <ion-icon
         (click)="eventFavorite(true)"
-        *ngIf="!product.favorite"
+        *ngIf="!isFavorite"
         slot="start"
         name="heart-outline"
       ></ion-icon>
