--- a/src/app/markteplace/components/recommended-product-list/recommended-product-list.component.html
+++ b/src/app/markteplace/components/recommended-product-list/recommended-product-list.component.html
@@ -1,12 +1,11 @@
 <ion-text color="dark">
   <h4 class="title-section">Productos recomendados</h4>
 </ion-text>
-<swiper
-  [slidesPerView]="2.1"
-  [spaceBetween]="1"  
->
-  <ng-template swiperSlide *ngFor="let product of products" >
-    <app-product-card  [product]="product" ></app-product-card>   
+<swiper [slidesPerView]="2.1" [spaceBetween]="1">
+  <ng-template swiperSlide *ngFor="let product of products">
+    <app-product-card
+      [product]="product"
+      [isFavorite]="isProductFavorite(product)"
+    ></app-product-card>
   </ng-template>
-   
 </swiper>
