Add add and remove favorite features on recommended profiles and offers

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,7 @@
   <!-- Profile list -->
   <app-recommended-profile-list
     [profiles]="profiles[0]"
+    [profilesFavorite]="profilesFavorite"
   ></app-recommended-profile-list>
   <!-- List Products recomended -->
   <app-recommended-product-list [productsFavorite]="productsFavorite"></app-recommended-product-list>
