--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,7 +83,7 @@
   --ion-color-light-tint: #f5f6f9;
 
   /* Color Custom */
-  --ion-color-favorite: #f23636;
+  --ion-color-favorite: #7a2ed8;
 
   --ion-color-tg-primary: #6304cc;
   --ion-color-tg-primary: #6304cc;
