Changed Chat static

--- a/src/app/markteplace/pages/chat-list/chat-list.page.html
+++ b/src/app/markteplace/pages/chat-list/chat-list.page.html
@@ -25,7 +25,7 @@
           <div class="no-gutters">
             <div class="message-your">
                 <div class="chat-bubble chat-bubble--left">                
-                  <span>Hola!, amigo claro con gusto.</span><br>
+                  <span>Hola!, me interesa este proucto.</span><br>
                   <div class="time" text-ring>12/02/23, 2:01pm</div>
                 </div>
             </div>
