--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -86,7 +86,7 @@
             [detail]="false"
             id="select-fruits"
           >
-            <ion-label><strong>Seleccionar Categorias</strong></ion-label>
+            <ion-button class="btn btn-secondary"><strong>Seleccionar Categorias</strong></ion-button>
           </ion-item>
         </ion-col>
         <ion-col size="12">
