add toggle ofer sell

--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -51,18 +51,8 @@
         </ion-button>
       </div>
       <div class="profile__btns--favorite">
-        <ion-icon
-          (click)="eventFavorite(false)"
-          *ngIf="profile.favorite"
-          slot="start"
-          name="heart"
-        ></ion-icon>
-        <ion-icon
-          (click)="eventFavorite(true)"
-          *ngIf="!profile.favorite"
-          slot="start"
-          name="heart-outline"
-        ></ion-icon>
+        <ion-icon (click)="eventFavorite(false)" *ngIf="isFavorite" slot="start" name="heart"></ion-icon>
+      <ion-icon (click)="eventFavorite(true)" *ngIf="!isFavorite" slot="start" name="heart-outline"></ion-icon>
       </div>
     </div>
   </div>
