--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -45,10 +45,50 @@
           </ion-item>
         </ion-col>
       </ion-row>
+    
       <ion-row>
         <ion-col size="12">
           <ion-item>
-            <ion-label position="floating">Precio </ion-label>
+            <ion-label>Producto en Oferta</ion-label>
+            <ion-toggle (click)="productOfer(!inOfer)">
+              <i class="fa fa-toggle-off" aria-hidden="true"></i>
+            </ion-toggle>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row *ngIf="!inOfer">
+        <ion-col size="12">
+          <ion-item>
+            <ion-label >Precio Q:</ion-label>
+            <ion-input
+              type="number"
+              step="any"
+              name="price"
+              [(ngModel)]="product.price"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      
+      <ion-row *ngIf="inOfer">
+        <ion-col size="6">
+          <ion-item>
+            <ion-label position="floating">Precio Anterior</ion-label>
+            <ion-input
+              type="number"
+              step="any"
+              name="oldPrice"
+              [(ngModel)]="product.oldPrice"
+              required
+              placeholder="Para activar oferta"
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="6">
+          <ion-item>
+            <ion-label position="floating">Precio en Oferta </ion-label>
             <ion-input
               type="number"
               step="any"
@@ -60,22 +100,6 @@
         </ion-col>
       </ion-row>
 
-      <ion-row>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating">Precio Anterior</ion-label>
-            <ion-input
-              type="number"
-              step="any"
-              name="oldPrice"
-              [(ngModel)]="product.oldPrice"
-              value="0"
-              required
-              placeholder="Para activar oferta"
-            ></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
 
       <ion-row>
         <ion-col size="12">
@@ -86,7 +110,7 @@
             [detail]="false"
             id="select-fruits"
           >
-            <ion-label><strong>Seleccionar Categorias</strong></ion-label>
+            <ion-button class="btn btn-secondary"><strong>Seleccionar Categorias</strong></ion-button>
           </ion-item>
         </ion-col>
         <ion-col size="12">
