--- a/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
+++ b/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
@@ -8,7 +8,12 @@
 </ion-header>
 
 <ion-content>
-  <swiper *ngIf="responsesDetail.product" [slidesPerView]="1" [spaceBetween]="2" class="mySwiper">
+  <swiper
+    *ngIf="responsesDetail.product"
+    [slidesPerView]="1"
+    [spaceBetween]="2"
+    class="mySwiper"
+  >
     <ng-template
       swiperSlide
       *ngFor="let img of product.images"
@@ -67,12 +72,21 @@
         <ion-label> {{responsesDetail.terms}} </ion-label>
       </ion-col>
       <ion-col size="12">
-        <ion-label> <strong>Válida hasta: </strong> {{ responsesDetail.expiration |date:'dd/MM/yyyy' }}</ion-label>
+        <ion-label>
+          <strong>Válida hasta: </strong> {{ responsesDetail.expiration
+          |date:'dd/MM/yyyy' }}</ion-label
+        >
       </ion-col>
     </ion-row>
-   
-   
-    <ion-button expand="block">Aceptar Oferta</ion-button>
-    <ion-button fill="clear" color="danger" expand="block">Anular Oferta</ion-button>
+
+    <ion-button
+      expand="block"
+      *ngIf="responsesDetail.status!==responseStatus.aproved"
+      (click)="acepted(responsesDetail.id)"
+      >Aceptar Oferta</ion-button
+    >
+    <ion-button fill="clear" color="danger" expand="block"
+      >Anular Oferta</ion-button
+    >
   </ion-card-content>
 </ion-content>
