--- a/src/app/markteplace/pages/chats/chats.page.scss
+++ b/src/app/markteplace/pages/chats/chats.page.scss
@@ -1,6 +1,6 @@
 .time{
     padding-top: 5px;
-    color: #dfdfdf;
+    color: #6d6d6d;
     float: right;
     font-size:small;
 }
@@ -11,3 +11,4 @@
     margin-bottom:4px;
     white-space: pre-wrap;
 }
+
