--- a/src/app/markteplace/pages/chats/chats.page.html
+++ b/src/app/markteplace/pages/chats/chats.page.html
@@ -11,7 +11,7 @@
   <ion-searchbar placeholder="Buscar"></ion-searchbar>
 
   <ion-list>
-    <ion-card *ngFor="let chat of chats">
+    <ion-card *ngFor="let chat of chats" (click)="sendMessage(chat._id)">
       <ion-item lines="none">
         <ion-avatar slot="start">
           <img src="{{chat.profile.photo}}" />
@@ -23,40 +23,6 @@
         </ion-label>
       </ion-item>
     </ion-card>
-
-    <!-- <ion-card>      
-      <ion-item lines="none" (click)="viewRedirect('/chat-list')">
-        <ion-avatar slot="start">
-          <img
-          src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
-          />
-        </ion-avatar>
-        <ion-label>
-          <b>
-            Mario Perez
-          </b> <br>
-          <p> Gracias por tu mensaje.</p>
-          <div class="time">13/02/2022</div>
-        </ion-label>
-      </ion-item>
-    </ion-card>
-
-    <ion-card>      
-      <ion-item lines="none" (click)="viewRedirect('/chat-list')">
-        <ion-avatar slot="start">
-          <img
-          src="https://static.vecteezy.com/system/resources/thumbnails/001/993/889/small/beautiful-latin-woman-avatar-character-icon-free-vector.jpg"
-          />
-        </ion-avatar>
-        <ion-label>
-          <b>
-            Isabela Méndez
-          </b> <br>
-          <p> Estoy interesada.</p>
-          <div class="time">13/02/2022</div>
-        </ion-label>
-      </ion-item>
-    </ion-card> -->
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
