--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -87,7 +87,7 @@
 </ion-content>
 <ion-footer *ngIf="isAuth">
   <ion-button *ngIf="type === 'info'" expand="block" shape="round" (click)="sendMessage(product.id)"
-    >Comprar</ion-button
+    >Crear Chat (Comprar)</ion-button
   >
   <ion-button *ngIf="type === 'review'" expand="block" shape="round" (click)="openReviewModal(product.id)"
     >Enviar Reseña</ion-button
